--- a/MyDataAccessLayer/MyDataAccessLayer.csproj
+++ b/MyDataAccessLayer/MyDataAccessLayer.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
