added pattern Builder

--- a/MyWebAppProject/MyWebAppProject.csproj
+++ b/MyWebAppProject/MyWebAppProject.csproj
@@ -16,4 +16,6 @@
     <ProjectReference Include="..\MyDataAccessLayer\MyDataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://appsemble.app/api.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
