TodoAPI project completed

--- a/MyWebAppProject/MyWebAppProject.csproj
+++ b/MyWebAppProject/MyWebAppProject.csproj
@@ -11,10 +11,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Nancy" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MyDataAccessLayer\MyDataAccessLayer.csproj" />
     <ProjectReference Include="..\TodoApi\TodoApi.csproj" />
   </ItemGroup>
 
