--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WIN-JN6720IOM98;Database=OnlineStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=WIN-CI84T8MTVSB;Database=OnlineStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
     "Logging": {
       "LogLevel": {
