added tests for HomeController and corrected few mistakes

--- a/MyWebAppProject/appsettings.json
+++ b/MyWebAppProject/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "UrlAddress": {
-    "ManagementApiUrl": "https://localhost:44391/api/ManagementApi"
+  "ManagementApi": {
+    "BaseUrl": "https://localhost:44391/api/ManagementApi"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=WIN-CI84T8MTVSB;Database=OnlineStore;Trusted_Connection=True;MultipleActiveResultSets=true"
